# Program-Activity-Tracker

./: .gitignore  .mcp.json  CLAUDE.md  Makefile  README.md  bootstrap.ps1  pyproject.toml  requirements-lock.txt  run-elevated.ps1  start.bat  stop.bat
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
backend/: requirements.txt
backend/app/: api_routes.py  config.py  icons.py  main.py  observability.py  store.py
backend/app/db/: migrations.py  schema.sql
bench/: README.md  throughput.py
docs/: architecture.md  manual-th.md  operations.md  risks-th.md  threat-model.md
launcher/: launcher.spec  tracker_launcher.py
mcp/: README.md  pyproject.toml
mcp/src/mcp_tracker/: __init__.py  __main__.py  client.py  config.py  errors.py  exporting.py  models.py  prompts.py  resources.py  server.py  tools.py
mcp/tests/: conftest.py  test_errors.py  test_integration.py  test_prompts.py  test_resources.py  test_tools.py
scripts/: build-release.ps1  bump-and-release.ps1  setup-defender-exclusion.ps1
scripts/release-template/: README.txt  requirements.txt  start.bat  stop.bat
service/: capture_service.py  etw_cleanup.py
service/native/: .gitignore  CMakeLists.txt  README.md
service/native/resources/: README.md  regenerate_icons.py  tracker_capture.rc
service/native/src/: etw_session.cpp  etw_session.hpp  event_consumer.cpp  event_consumer.hpp  handle_enumerator.cpp  handle_enumerator.hpp  json_writer.hpp  list_processes.cpp  list_processes.hpp  main.cpp  path_translator.cpp  path_translator.hpp  pid_filter.hpp  provider_guids.hpp  tdh_parser.cpp  tdh_parser.hpp
tests/: test_auth_middleware.py  test_capture.py  test_capture_native.py  test_icons.py  test_integration.py  test_logs_api.py  test_native_engine.py  test_native_processes.py  test_native_protocol.py  test_native_smoke_admin.py  test_observability.py  test_store.py
tests/fixtures/: etw_events.py
ui/: .eslintrc.cjs  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
ui/src/components/: AdminBanner.tsx  EventDetailDrawer.tsx  EventTable.tsx  ExportButtons.tsx  KindFilters.tsx  LogsTab.tsx  McpHowToTab.tsx  OperationsFilter.tsx  PauseResume.tsx  ProcessIcon.tsx  ProcessPicker.tsx  ProcessTreeView.tsx  ProviderToggle.tsx  RateSparkline.tsx  SessionList.tsx  TimeRangeFilter.tsx  ToastStack.tsx
ui/src/hooks/: useEventQuery.ts  useEventStream.ts  useLogStream.ts  useProcessList.ts  useToasts.ts
