[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "activity-tracker"
version = "0.2.0"
description = "Windows activity tracker with ETW-based capture and FastAPI control plane."
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.5",
    "pydantic-settings>=2.6",
    "psutil==7.2.2",
    "pywintrace==0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.7",
    "mypy>=1.10",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "service*"]
namespaces = false

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
packages = ["backend.app", "service"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
