[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "activity-tracker"
version = "0.2.3"
description = "Windows activity tracker with ETW-based capture and FastAPI control plane."
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "fastapi==0.115.6",
    "starlette>=0.41,<1.0",
    "uvicorn[standard]==0.34.0",
    "pydantic>=2.13",
    "pydantic-settings>=2.6",
    "psutil==7.2.2",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.7",
    "mypy>=1.10",
    "httpx>=0.27",
    "respx>=0.21",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "service*"]
namespaces = false

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency / param helpers are designed to be called in defaults.
extend-immutable-calls = [
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.Depends",
    "fastapi.File",
    "fastapi.Form",
]

[tool.ruff.lint.per-file-ignores]
# Pre-existing patterns owned by other agents; tightened gradually.
"backend/app/api_routes.py" = ["SIM114", "SIM105"]
"backend/app/store.py" = ["SIM105"]
"service/capture_service.py" = ["SIM105"]
# Launcher does a lot of best-effort cleanup (Tk widget teardown, subprocess
# termination, AV-killed binaries) where contextlib.suppress isn't worth the
# import noise. SIM112 is wrong on Windows: %ProgramFiles% is mixed-case.
"launcher/tracker_launcher.py" = ["SIM105", "SIM112", "UP031"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
explicit_package_bases = true
packages = ["backend.app", "service"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
